--- a/styles/pages/_amazes_main.scss
+++ b/styles/pages/_amazes_main.scss
@@ -1,5 +1,12 @@
 .home {
     margin: 0 auto;
+    min-height: 485px;
+
+    &__column {
+        display: flex;
+        flex-direction: column;
+    }
+
     &__title {
         text-transform: uppercase;
         margin: 0 0 24px 0;
@@ -56,6 +63,7 @@
         display: flex;
         flex-direction: column;
         grid-column: 2 / 3;
+        min-height: 380px;
     }
 
     &__text {
